crates/wac-parser/tests/resolution/fail/mismatched-func-param-name/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (param "a" u32)))
  )
)
